--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,12 @@
         
         <div class="container">
             <p>Please select a product category to view:</p>
+            
+            <ul>
+                <li><a th:href="@{/jackets}">Jackets</a></li>
+                <li><a th:href="@{/shirts}">Shirts</a></li>
+                <li><a th:href="@{/accessories}">Accessories</a></li>
+            </ul>
         </div>
     </body>
 </html>
