Added loader animation for product pages

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -25,6 +25,10 @@
                 <tbody id="products"></tbody>
             </table>
             
+            <div class="spinner-border text-secondary m-2" role="status" id="loader">
+                <span class="sr-only">Loading...</span>
+            </div>
+            
             <span id="errorMessage"></span>
         </div>
         
