--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -25,9 +25,11 @@
                 <tbody id="products"></tbody>
             </table>
             
-            <div class="spinner-border text-secondary m-2" role="status" id="loader">
-                <span class="sr-only">Loading...</span>
-            </div>
+            <div class="d-flex justify-content-center" id="loader">
+                <div class="spinner-border text-secondary m-2" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>    
             
             <span id="errorMessage"></span>
         </div>
