Fixed loader animation bug

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -25,8 +25,8 @@
                 <tbody id="products"></tbody>
             </table>
             
-            <div class="d-flex justify-content-center" id="loader">
-                <div class="spinner-border text-secondary m-2" role="status">
+            <div class="d-flex justify-content-center">
+                <div class="spinner-border text-secondary m-2" role="status" id="loader">
                     <span class="sr-only">Loading...</span>
                 </div>
             </div>    
